--- a/doc/report.tex
+++ b/doc/report.tex
@@ -309,4 +309,96 @@ Para la aerolínea es importante tener un número mínimo de vuelos para cada ru
     \sum_{k} N_{ijk} \geq (N_{ij})_{min},\ \forall (i,j)
 \end{equation}
 
+\section{Solución óptima}
+
+Después de implementar un algoritmo para encontrar la solución al problema, donde se usa el método \emph{Simplex} a través del comando \texttt{glpk} de \texttt{Octave}. Se obtuvo un conjunto de soluciones para distintos valores que puede tomar la variable $P_{k}$, estas se pueden adaptar a distintos escenarios en los que se encuentre la aerolinea. A continuación se muestra el cuadro resultante con la ganacia máxima y el número de aeronaves para cada tipo.
+
+\begin{table}[ht!]
+    \centering
+    \begin{tabular}{r | r | r l}
+            Ganancia  &   $P_1$  & $P_2$ & \\
+            \vspace{-15pt}\\
+            \cline{1-3}
+            % \cline{1-3}
+            593572  & 0  & 3 & \\
+            596153  & 1  & 2 & (a)\\
+            596313  & 1  & 3 & (b)\\
+            596153  & 2  & 2 & \\
+            596313  & 2  & 3 & (c)\\
+            594607  & 3  & 1 & \\
+            596153  & 3  & 2 & \\
+            596313  & 3  & 3 & (d)\\
+    \end{tabular}
+    \caption{Ganancia para distintos valores de $P_k$}
+    \label{tab:ganancia}
+\end{table}
+
+Se quieren resaltar dos de los resultados obtenidos. El primero es (b), se puede ver que comparte la misma ganacia que los casos (c) y (d), pero posiblemente la aerolínea tenga interés en reducir el número de aeronaves por lo que la opción (b) sería la mejor. Aunque, es posible que la disponibilidad de aeronaves puede ser un incoveniente y se opte por el caso (a), reduciendo el número de aeronaves. A continuación se muestran la mejor distribución de vuelos encontrada por el algoritmo en el caso (b) para cada tipo de avión.
+
+\begin{table}[ht!]
+    \centering
+    \begin{tabular}{r|r|r|r|r}
+        $N_{ij1}$%
+               &   1  &   2  &   3  &   4\\
+            \hline
+            \hline
+             1 & 0 & 1 & 0 & 0\\
+             2 & 0 & 0 & 1 & 0\\
+             3 & 0 & 0 & 0 & 0\\
+             4 & 0 & 0 & 0 & 0\\
+    \end{tabular}
+    \caption{Mejor distribución de vuelos para el avión 1 (b)}
+    \label{tab:nij1b}
+\end{table}
+
+\begin{table}[ht!]
+    \centering
+    \begin{tabular}{r|r|r|r|r}
+        $N_{ij1}$%
+               &   1  &   2  &   3  &   4\\
+            \hline
+            \hline
+             1 & 0 & 4 & 0 & 0\\
+             2 & 6 & 0 & 4 & 8\\
+             3 & 0 & 5 & 0 & 0\\
+             4 & 0 & 7 & 0 & 0\\
+    \end{tabular}
+    \caption{Mejor distribución de vuelos para el avión 2 (b)}
+    \label{tab:nij2b}
+\end{table}
+
+En el caso de (a), los valores de $N_{ijk}$ quedarían de la siguiente manera.
+
+\begin{table}[ht!]
+    \centering
+    \begin{tabular}{r|r|r|r|r}
+        $N_{ij1}$%
+               &   1  &   2  &   3  &   4\\
+            \hline
+            \hline
+             1 & 0 & 5 & 0 & 0\\
+             2 & 0 & 0 & 1 & 0\\
+             3 & 0 & 0 & 0 & 0\\
+             4 & 0 & 0 & 0 & 0\\
+    \end{tabular}
+    \caption{Mejor distribución de vuelos para el avión 1 (a)}
+    \label{tab:nij1a}
+\end{table}
+
+\begin{table}[ht!]
+    \centering
+    \begin{tabular}{r|r|r|r|r}
+        $N_{ij1}$%
+               &   1  &   2  &   3  &   4\\
+            \hline
+            \hline
+             1 & 0 & 2 & 0 & 0\\
+             2 & 6 & 0 & 4 & 8\\
+             3 & 0 & 5 & 0 & 0\\
+             4 & 0 & 7 & 0 & 0\\
+    \end{tabular}
+    \caption{Mejor distribución de vuelos para el avión 2 (a)}
+    \label{tab:nij2a}
+\end{table}
+
 \end{document}
