--- a/doc/report.tex
+++ b/doc/report.tex
@@ -93,7 +93,7 @@ La función objetivo está conformada por variables de decisión, siendo esta un
 
 \section{Asignación de vuelos}
 
-Este problema tiene como objetivo maximizar las ganancias para una aerolínea, es necesario tomar una decisión en la programación de los vuelos en un día. Dependiendo de una demanda entre un conjunto de ciudades, precio del billete y la opción de usar distintas aeronaves. Además de eso, se especifican las distancia entre las ciudades, la capacidad de cada avión, velocidad, máximo tiempo de utilización y su costo de uso en un periodo de tiempo. A continuación se puede ver gráficamente la distribución de las ciudades y la distancia entre ellas.
+Este problema tiene como objetivo maximizar las ganancias para una aerolínea, para ello es necesario tomar una decisión en la programación de los vuelos durante un día. Dependiendo de una demanda entre un conjunto de ciudades, precio del billete y la opción de usar distintas aeronaves. Además de eso, se especifican las distancia entre las ciudades, la capacidad de cada avión, velocidad, máximo tiempo de utilización y su costo de uso en un periodo de tiempo. A continuación se puede ver gráficamente la distribución de las ciudades y la distancia entre ellas.
 
 \vspace{1em}
 
